# hackathon2-todo-console-app

./: .env  .gitattributes  .gitignore  CHATBOT_FIX_SUMMARY.md  CHATBOT_INTEGRATION_FIXES.md  CHATBOT_INTEGRATION_VERIFICATION.md  CLAUDE.md  COHERE_FIX_SUMMARY.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION_VERIFICATION_REPORT.md  README.md  __init__.py  auth.py  clean_sqlalchemy_test.py  cloud-deployment-guide.render.md  comprehensive_mcp_verification.py  comprehensive_mcp_verification_fixed.py  db.py  debug_chat_response.py  diagnose_chatbot_issue.js  final_identity_test.py  final_integration_test.py  final_requirement_test.py  final_verification.py  final_verification_test.py  frontend_diagnostic.js  frontend_functionality_test.py  kill_ports_and_start_frontend.bat  main.py  models.py  pyproject.toml  quick_verify_integration.py  requirements.txt  simple_final_test.py  simple_language_test.py  tasks.json  test.db  (+35 more)
.claude/: settings.local.json
agents/: console_ux.md  spec_architect.md  todo_domain.md
backend/: .env.example  SOLUTION_SUMMARY.md  api.py  final_verification.py  main.py  models.py  requirements.txt  run_server.py  setup_database.py  start_server.py  test_all_endpoints.py  test_chatbot_tasks.py  test_endpoint_call.py  test_merge.py
domain/: exceptions.py
fullstackwebapp/: .env.example  .gitignore  run_backend.bat  run_backend.ps1  start_backend.bat  start_backend.ps1  test_imports.py  tmpclaude-870e-cwd
phase-5/: .gitignore  AGENTS_INSTRUMENTED.md  CICD_COMPLETE.md  (+34 more)
(+618 files in other folders)
