[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I Todo In-Memory Python Console App"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0.0", "flake8>=5.0.0", "black>=23.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "application*", "infrastructure*", "presentation*", "tests*"]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]